feat (registro-finalizacao, login-perfil)
